# internal/api/impl.go
@@ -15,8 +15,14 @@ type DB interface {
 	Tournaments(ctx context.Context) ([]Tournament, error)
 	SeriesByTournamentId(ctx context.Context, tournamentId uuid.UUID) ([]Series, error)
 	SeriesById(ctx context.Context, Id uuid.UUID) (*Series, error)
+	UpdateSeriesById(ctx context.Context, Id uuid.UUID, s Series) error
 	GameById(ctx context.Context, Id uuid.UUID) (*Game, error)
+	UpdateGameById(ctx context.Context, Id uuid.UUID, g Game) error
 	GamesBySeriesId(ctx context.Context, seriesId uuid.UUID) ([]Game, error)
+	CreateUser(ctx context.Context, v User) (*User, error)
+	CreateTeam(ctx context.Context, v Team) (*Team, error)
+	CreateGame(ctx context.Context, t Game) (*Game, error)
+	CreateSeries(ctx context.Context, t Series) (*Series, error)
 }
 
 type Server struct {
@@ -29,7 +35,7 @@ var _ StrictServerInterface = (*Server)(nil)
 func NewServer(db DB) ServerInterface {
 	s := Server{db: db}
 
-	return NewStrictHandlerWithOptions(s, []StrictMiddlewareFunc{CORS}, StrictHTTPServerOptions{
+	return NewStrictHandlerWithOptions(s, []StrictMiddlewareFunc{}, StrictHTTPServerOptions{
 		RequestErrorHandlerFunc:  s.RequestErrorHandlerFunc,
 		ResponseErrorHandlerFunc: s.ResponseErrorHandlerFunc,
 	})
@@ -65,6 +71,29 @@ func (s Server) GetGameById(ctx context.Context, request GetGameByIdRequestObjec
 	}, nil
 }
 
+func (s Server) UpdateGameById(ctx context.Context, request UpdateGameByIdRequestObject) (UpdateGameByIdResponseObject, error) {
+	if err := s.db.UpdateGameById(ctx, request.GameId, *request.Body); err != nil {
+		return nil, fmt.Errorf("failed to update game from db: %w", err)
+	}
+
+	request.Body.Id = request.GameId
+
+	return UpdateGameById200JSONResponse{
+		Game: *request.Body,
+	}, nil
+}
+
+func (s Server) CreateGame(ctx context.Context, request CreateGameRequestObject) (CreateGameResponseObject, error) {
+	res, err := s.db.CreateGame(ctx, *request.Body)
+	if err != nil {
+		return nil, fmt.Errorf("failed to create game from db: %w", err)
+	}
+
+	return CreateGame201JSONResponse{
+		Game: *res,
+	}, nil
+}
+
 func (s Server) GetSeriesById(ctx context.Context, request GetSeriesByIdRequestObject) (GetSeriesByIdResponseObject, error) {
 	res, err := s.db.SeriesById(ctx, request.SeriesId)
 	if err != nil {
@@ -78,6 +107,39 @@ func (s Server) GetSeriesById(ctx context.Context, request GetSeriesByIdRequestO
 	return GetSeriesById200JSONResponse{
 		Series: *res,
 		Games:  games,
+	}, nil
+}
+
+func (s Server) UpdateSeriesById(ctx context.Context, request UpdateSeriesByIdRequestObject) (UpdateSeriesByIdResponseObject, error) {
+	if err := s.db.UpdateSeriesById(ctx, request.SeriesId, *request.Body); err != nil {
+		return nil, fmt.Errorf("failed to update series from db: %w", err)
+	}
+
+	request.Body.Id = request.SeriesId
+
+	return UpdateSeriesById200JSONResponse{
+		Series: *request.Body,
+	}, nil
+}
+
+func (s Server) CreateSeries(ctx context.Context, request CreateSeriesRequestObject) (CreateSeriesResponseObject, error) {
+	res, err := s.db.CreateSeries(ctx, *request.Body)
+	if err != nil {
+		return nil, fmt.Errorf("failed to create series from db: %w", err)
+	}
+
+	return CreateSeries201JSONResponse{
+		Series: *res,
+	}, nil
+}
+
+func (s Server) CreateTeam(ctx context.Context, request CreateTeamRequestObject) (CreateTeamResponseObject, error) {
+	createdResource, err := s.db.CreateTeam(ctx, *request.Body)
+	if err != nil {
+		return nil, fmt.Errorf("failed to create team from db: %w", err)
+	}
+	return CreateTeam201JSONResponse{
+		Team: *createdResource,
 	}, nil
 }
 
@@ -107,6 +169,7 @@ func (s Server) GetGamesByTournamentId(ctx context.Context, request GetGamesByTo
 		return nil, fmt.Errorf("failed to get series from db: %w", err)
 	}
 
+	// this could could be removed by adding a GamesByTournamentId db method
 	var res []Game
 	for _, tournamentSeries := range series {
 		games, err := s.db.GamesBySeriesId(ctx, tournamentSeries.Id)
@@ -128,6 +191,16 @@ func (s Server) GetSeriesByTournamentId(ctx context.Context, request GetSeriesBy
 	}
 	return GetSeriesByTournamentId200JSONResponse{
 		Series: res,
+	}, nil
+}
+
+func (s Server) CreateUser(ctx context.Context, request CreateUserRequestObject) (CreateUserResponseObject, error) {
+	createdResource, err := s.db.CreateUser(ctx, *request.Body)
+	if err != nil {
+		return nil, fmt.Errorf("failed to create user from db: %w", err)
+	}
+	return CreateUser201JSONResponse{
+		User: *createdResource,
 	}, nil
 }
 
